--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -1,5 +1,7 @@
 /* ./src/assets/styles/tailwine.css */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Unicase&family=Playfair+Display+SC:ital@1&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -17,6 +19,30 @@ button {
 
 button:focus {
     @apply outline-none;
+}
+
+button:hover {
+    @apply scale-50;
+}
+
+.btn-primary {
+    @apply  bg-transparent text-pink-light  border-black-dark rounded-full;
+}
+
+.btn-primary-full {
+    @apply bg-pink-light border-pink-dark rounded-full text-black-dark font-bold;
+}
+
+.btn-black {
+    @apply bg-transparent text-black-dark  border-black-dark rounded-full;
+}
+
+.btn-black:hover {
+    @apply bg-black-dark text-green-white;
+}
+
+.btn-primary:hover {
+    @apply bg-pink-light text-black-dark border-pink-light font-bold;
 }
 
 .btn-green {
@@ -56,7 +82,7 @@ button:focus {
 }
 
 .title1 {
-    @apply uppercase text-green-dark font-bold;
+    @apply uppercase  font-bold;
 }
 
 .lineTop, .lineBottom {
@@ -88,7 +114,7 @@ button:focus {
 }
 
 .displaySelect {
-    @apply cursor-pointer border-transparent text-sm pr-5 text-green-dark outline-none bg-transparent;
+    @apply cursor-pointer border-transparent w-32 text-sm pr-5 text-green-dark outline-none bg-transparent;
 }
 
 .colorBtn:focus {
@@ -135,7 +161,7 @@ button:focus {
 }
 
 .addressInput {
-    @apply w-full border-b border-gray-400 text-sm px-2 p-1 mt-3;
+    @apply w-full border-b border-gray-400 text-sm px-2 p-1 mt-3 ;
 }
 
 .label-grey {
